add loading gif

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -20,6 +20,11 @@
   padding: 2px 10px 2px 10px;
 }
 
+.loading {
+  margin-top: 74px;
+  vertical-align: middle;
+}
+
 .table > tbody > tr > td {
   vertical-align: middle;
 }
