--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,7 +16,9 @@
 }
 
 .stock-table-list {
-  max-height: 300px;
+  max-height: 310px;
+  margin-top: 2px;
+  margin-bottom: -18px;
   overflow-y: auto;
 }
 
