--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -25,8 +25,17 @@
 .result {
   // border: 1px solid #ccc;
   // border-radius: 2px;
-  margin: 4px 0px 4px 4px;
+  margin: 4px 0px -10px 4px;
   padding: 2px 10px 2px 10px;
+
+  hr {
+    margin-top: 4px;
+    margin-bottom: 6px;
+  }
+
+  .btn-sm {
+    margin-bottom: -6px;
+  }
 }
 
 .loading {
