fix scroll display in table header

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -24,10 +24,16 @@
   .ant-table {
     font-size: 11px;
   }
+  
+  .ant-table-header {
+    margin-bottom: 0px !important;;
+    overflow: hidden !important;;
+  }
 
   .ant-table-thead > tr > th {
     background: white;
     border-bottom: 2px solid #e8e8e8;
+    font-weight: 700;
   }
 
   .ant-table-placeholder {
