--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -25,6 +25,16 @@
   .table {
     margin-bottom: 0px;
   }
+
+  .table-none {
+    height: 212px;
+    font-size: 16px;
+    text-align: center;
+    
+    &:hover {
+      background-color: white;
+    }
+  }
 }
 
 .result {
