--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -66,9 +66,10 @@
   // border-radius: 2px;
   margin: 4px 0px -10px 4px;
   padding: 2px 10px 2px 10px;
+  line-height: 2;
 
   hr {
-    margin-top: 4px;
+    margin-top: 6px;
     margin-bottom: 6px;
   }
 
@@ -78,7 +79,9 @@
 }
 
 .loading {
-  margin-top: 34px;
+  // margin-top: 34px;
+  height: 167px;
+  padding-top: 70px;
   vertical-align: middle;
 }
 
