--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -96,3 +96,23 @@
 .stock-down {
   color: #009900;
 }
+
+.donate {
+  height: 310px;
+  margin-bottom: -18px;
+  overflow-y: auto;
+
+  .message {
+    text-align: center;
+    font-size: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  img {
+    display: block;
+    text-align: center;
+    width: 80%;
+    margin: 0 auto;
+  }
+}
