--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -85,6 +85,21 @@
   vertical-align: middle;
 }
 
+.stock-info {
+  margin: 4px 0px -10px 4px;
+  padding: 2px 10px 2px 10px;
+  line-height: 2;
+
+  hr {
+    margin-top: 6px;
+    margin-bottom: 6px;
+  }
+
+  .btn-sm {
+    margin-bottom: -6px;
+  }
+}
+
 .table > tbody > tr > td {
   vertical-align: middle;
 }
