--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -86,9 +86,11 @@
 }
 
 .stock-info {
+  // height: 310px;
+  // overflow-y: auto;
   margin: 4px 0px -10px 4px;
-  padding: 2px 10px 2px 10px;
-  line-height: 2;
+  padding: 2px 4px 2px 4px;
+  // line-height: 2;
 
   hr {
     margin-top: 6px;
@@ -97,6 +99,14 @@
 
   .btn-sm {
     margin-bottom: -6px;
+  }
+  
+  .table {
+    margin-bottom: 0px;
+  }
+  
+  .statistics>.table>tbody>tr>td {
+    padding: 4px;
   }
 }
 
@@ -130,4 +140,12 @@
     width: 80%;
     margin: 0 auto;
   }
+}
+
+.text-right {
+  text-align: right;
+}
+
+.text-center {
+  text-align: center;
 }
