fix json string issue and adjust style of stock info UI

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -107,6 +107,12 @@
   
   .statistics>.table>tbody>tr>td {
     padding: 4px;
+    text-align: center;
+  }
+
+  .statistics>.table>thead>tr>th {
+    padding-bottom: 4px;
+    text-align: center;
   }
 }
 
